background color overflow fixed

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
 .App {
 width: 100vw;
 height: 100vh;
+overflow: auto;
 display: flex;
 flex-direction: column;
 align-items: center;
